--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "PORT=5000 nodemon app.js"
+    "dev": "PORT=5000 nodemon app.js",
+    "start": " nodemon app.js"
   },
   "author": "Julio Miranda",
   "license": "ISC",
