--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,16 @@ networks:
 
 services:
   api:
-    build: ./
+    build:
+      context: ./
+      args:
+        DATABASE_URL: ${DATABASE_URL}
+        PORT: ${PORT}
     container_name: pbg-api
     depends_on:
       - db
     networks:
       - pbgapi
-    env_file: ./.env
     ports:
       - "5000:5000"
     command: npm start  
@@ -22,10 +25,13 @@ services:
     restart: unless-stopped
     image: postgres
     container_name: pbg-db
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
     networks:
       - pbgapi
     ports:
       - "5432"
-    env_file: ./.env
     volumes:
       - PostgresData:/var/lib/postgresql/data  
