--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,9 @@ services:
     build:
       context: ./
       args:
-        DATABASE_URL: ${DATABASE_URL}
-        PORT: ${PORT}
+        DATABASE_URL: ${DATABASE_URL} 
     container_name: pbg-api
-    
+    env-file: ./env
     ports:
       - "5000:5000"
     command: npm start  
