--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,41 @@
 version: "3.9"
 
-
-
 services:
-  db:
+  pbg-db:
     image: postgres
     restart: unless-stopped
     container_name: pbg-db
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - proxy
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432"
+      - '5432'
     volumes:
       - PostgresData:/var/lib/postgresql/data  
   api:
     depends_on:
-      - db
+      - pbg-db
     build:
       context: ./
       args:
         DATABASE_URL: ${DATABASE_URL} 
     container_name: pbg-api
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - proxy
     env_file: ./.env
     ports:
-      - "5000:5000"
+      - 5000:5000
     command: npm start  
+
 volumes:
   PostgresData:  
+networks:
+  proxy:
+    external: true
